--- a/libs/css/custom.css
+++ b/libs/css/custom.css
@@ -22,8 +22,8 @@ nav .fa, nav .fab {
 	color: var(--primary-color);
 }
 
-/* product style */
 
+/* product style */
 #items img{
 	width: 100%;
 	height: auto;
@@ -35,6 +35,7 @@ nav .fa, nav .fab {
 
 #items img:hover{
 	transform: scale(1);
+	cursor: pointer;
 }
 
 #items .item{
@@ -57,11 +58,35 @@ nav .fa, nav .fab {
 	color: var(--primary-color);
 }
 
+
 #items .item > button{
 	border: 0;
 	padding: 6px;
-	background: linear-gradient(20deg, var(--primary-color) 10%, var(--secondary-color) 100% );
 	color: var(--muted-white);
+	border-radius: 4px;
+}
+
+#items .item > button.btn-disabled{
+	background-color: var(--secondary-color);
+	opacity: 0.5;
+}
+
+#items .item > button.btn-disabled:hover{
+	cursor: not-allowed;
+}
+
+#items .item > button.btn-active{
+	background: linear-gradient(20deg, var(--primary-color) 10%, var(--secondary-color) 100% );
+}
+
+#items .item > button:hover{
+	cursor: pointer;
+}
+
+
+/* pagination */
+a.page-link{
+	color: var(--secondary-color);
 }
 
 
